--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "ant-design-vue": "^4.1.2",
     "axios": "^1.6.8",
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.14",
     "iview": "^3.5.4",
+    "jquery": "^3.7.1",
+    "spark-md5": "^3.0.2",
     "swiper": "^6.8.1",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.1.3",
+    "vue-simple-uploader": "^0.7.6",
     "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
@@ -25,6 +29,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass-loader": "^14.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -33,8 +38,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
+      "plugin:vue/essential"
     ],
     "parserOptions": {
       "parser": "babel-eslint"
