--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.1.3",
+    "vue-simple-spinner": "^1.2.10",
     "vue-simple-uploader": "^0.7.6",
+    "vue-spinner": "^1.0.4",
     "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
