--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "ant-design-vue": "^4.1.2",
     "axios": "^1.6.8",
     "core-js": "^3.6.5",
+    "date-fns": "^3.6.0",
     "element-ui": "^2.15.14",
     "iview": "^3.5.4",
     "jquery": "^3.7.1",
+    "moment": "^2.30.1",
     "spark-md5": "^3.0.2",
     "swiper": "^6.8.1",
     "vue": "^2.6.11",
